--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,3 +12,6 @@ python = "^3.11"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.plugins."funlab_plugin"]
+# QuoteService="finfun.sse.view:SSEView"
