--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,10 +8,16 @@ packages = [{include = "funlab"}]
 
 [tool.poetry.dependencies]
 python = "^3.11"
+funlab-libs = {path = "../funlab-libs", develop = true}
+Flask = ">=3.0"
+flask-login = ">=0.6"
+SQLAlchemy = ">=2.0"
+tzlocal = ">=4.0"
+pydantic = ">=2.0"
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.plugins."funlab_plugin"]
-# QuoteService="finfun.sse.view:SSEView"
+SSEService = "funlab.sse.service:SSEService"
